tests/compile_fail/borrow/skip_and_others.rs
#[derive(derive_more::Borrow)]
struct Foo(
    #[borrow]
    #[borrow(skip)]
    i32,
);

fn main() {}
